@@ -247,6 +247,14 @@ sub fetch_multi {
     return $rows;
 }
 
+sub remove_end_filter {
+    my $self = shift;
+    
+    $self->{end_filter} = {};
+    
+    return $self;
+}
+
 # Deprecated
 sub default_filter {
     my $self = shift;
@@ -427,6 +435,12 @@ Row count must be specified.
 Filters.
 These each filters override the filters applied by C<apply_filter> of
 L<DBIx::Custom>.
+
+=head2 C<(experimental) remove_end_filter>
+
+    $result->remove_end_filter;
+
+Remove end filter.
 
 =head2 C<(experimental) stash>
 
